# GooFit

./: BinnedDataSet.cc  BinnedDataSet.hh  CMakeLists.txt  DataSet.hh  FitControl.cc  FitControl.hh  FitManager.hh  FitManagerMinuit1.cc  FitManagerMinuit2.cc  FitManagerMinuit2.hh  FunctorWriter.cc  GlobalCudaDefines.hh  PdfBase.cc  PdfBase.cu  PdfBase.hh  PdfGraphEvaluator.cc  PdfGraphEvaluator.cu  PdfGraphEvaluator.hh  UnbinnedDataSet.cc  UnbinnedDataSet.hh  Variable.cc  Variable.hh  VariableCartesianProduct.cc  VariableCartesianProduct.hh  tiledRange.hh
PDFs/: AddPdf.cu  AddPdf.hh  ArgusPdf.cu  ArgusPdf.hh  BWPdf.cu  BWPdf.hh  BifurGaussPdf.cu  BifurGaussPdf.hh  BinTransformPdf.cu  BinTransformPdf.hh  CompositePdf.cu  CompositePdf.hh  ConvolutionPdf.cu  ConvolutionPdf.hh  CorrGaussianPdf.cu  CorrGaussianPdf.hh  CrystalBallPdf.cu  CrystalBallPdf.hh  DalitzPlotCoherencePdf.cu  DalitzPlotCoherencePdf.hh  DalitzPlotPdf.cu  DalitzPlotPdf.hh  DalitzPlotStepFunctionPdf.cu  DalitzPlotStepFunctionPdf.hh  DalitzVetoPdf.cu  DalitzVetoPdf.hh  EventWeightedAddPdf.cu  EventWeightedAddPdf.hh  ExpGausPdf.cu  ExpGausPdf.hh  ExpPdf.cu  ExpPdf.hh  GaussianNoObsPdf.cu  GaussianNoObsPdf.hh  GaussianPdf.cu  GaussianPdf.hh  GooBDecayPdf.cu  GooBDecayPdf.hh  GooDecayPdf.cu  GooDecayPdf.hh  (+48 more)
cmake/Modules/: FindCUDA.cmake
examples/: CMakeLists.txt  examplesbase.cmake
examples/2d_plot/: CMakeLists.txt
examples/addition/: CMakeLists.txt
examples/bdecay/: CMakeLists.txt  bdecay.cu
examples/chisquare/: CMakeLists.txt  chisquare.cu
examples/convolution/: CMakeLists.txt
examples/dalitz/: CMakeLists.txt
examples/exponential/: CMakeLists.txt
examples/product/: CMakeLists.txt
examples/simpleFit/: CMakeLists.txt
